--- a/style.css
+++ b/style.css
@@ -5,5 +5,21 @@
   background-image: url("bg-2.png");
   background-repeat: no-repeat;
   background-position: -2% 70%;
-  height: 1000px;
+  height: 800px;
+}
+.buynow {
+  font-size: large;
+  color: aliceblue;
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+.car-bg {
+  background-image: url("bg-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.buynow:hover {
+  box-shadow: 5px 5px 10px gray;
 }
