--- a/style.css
+++ b/style.css
@@ -66,3 +66,43 @@
 .con1 {
   margin-bottom: 50px;
 }
+.cat {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  text-decoration: underline solid orange 20%;
+  margin-bottom: 80px;
+}
+.cate {
+  justify-content: center;
+  text-align: center;
+}
+.col-md-3 img {
+  margin-top: 10%;
+  width: 50%;
+  margin-bottom: 10%;
+}
+.col-md-3 img:hover {
+  width: 60%;
+  transition-duration: 1s;
+}
+.shad1 {
+  padding-top: 20px;
+  box-shadow: 3px 3px 20px rgb(200, 200, 200);
+  height: 270px;
+  width: 270px;
+  margin-right: 2%;
+  border-radius: 30px 0px 30px 0px;
+}
+.shad2 {
+  padding-top: 20px;
+  box-shadow: 3px 3px 20px rgb(200, 200, 200);
+  height: 270px;
+  width: 270px;
+  margin-bottom: 15%;
+  border-radius: 0px 30px 0px 30px;
+}
+.shad3 img {
+  margin-top: 0%;
+  width: 110%;
+}
