--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 }
 .buynow:hover {
   box-shadow: 5px 5px 10px gray;
+  transition-duration: 0.2s;
 }
 .carousel-control-next {
   justify-content: end;
@@ -35,7 +36,7 @@
   align-items: center;
   background-color: orange;
   border-radius: 5px;
-  height: fit-content;
+  height: 8px;
   width: fit-content;
   margin-left: 45.76%;
   margin-bottom: 0%;
@@ -112,4 +113,7 @@
   height: 300px;
   border-radius: 30px;
   margin-bottom: 100px;
+}
+.form-control {
+  margin-bottom: 10px;
 }
